--- a/templates/barman.conf.erb
+++ b/templates/barman.conf.erb
@@ -46,40 +46,40 @@ parallel_jobs = <%= @parallel_jobs %>
 <%- if @path_prefix -%>
 path_prefix = <%= @path_prefix %>
 <%- end -%>
-<%- if @post_archive_retry_script != false -%>
+<%- if @post_archive_retry_script -%>
 post_archive_retry_script = <%= @post_archive_retry_script %>
 <%- end -%>
-<%- if @post_archive_script != false -%>
+<%- if @post_archive_script -%>
 post_archive_script = <%= @post_archive_script %>
 <%- end -%>
-<%- if @post_backup_retry_script != false -%>
+<%- if @post_backup_retry_script -%>
 post_backup_retry_script = <%= @post_backup_retry_script %>
 <%- end -%>
-<%- if @post_backup_script != false -%>
+<%- if @post_backup_script -%>
 post_backup_script = <%= @post_backup_script %>
 <%- end -%>
-<%- if @pre_archive_retry_script != false -%>
+<%- if @pre_archive_retry_script -%>
 pre_archive_retry_script = <%= @pre_archive_retry_script %>
 <%- end -%>
-<%- if @pre_archive_script != false -%>
+<%- if @pre_archive_script -%>
 pre_archive_script = <%= @pre_archive_script %>
 <%- end -%>
-<%- if @pre_backup_retry_script != false -%>
+<%- if @pre_backup_retry_script -%>
 pre_backup_retry_script = <%= @pre_backup_retry_script %>
 <%- end -%>
-<%- if @pre_backup_script != false -%>
+<%- if @pre_backup_script -%>
 pre_backup_script = <%= @pre_backup_script %>
 <%- end -%>
-<%- if @immediate_checkpoint != false -%>
+<%- if @immediate_checkpoint -%>
 immediate_checkpoint = <%= @immediate_checkpoint %>
 <%- end -%>
-<%- if @basebackup_retry_times != false -%>
+<%- if @basebackup_retry_times -%>
 basebackup_retry_times = <%= @basebackup_retry_times %>
 <%- end -%>
-<%- if @basebackup_retry_sleep != false -%>
+<%- if @basebackup_retry_sleep  -%>
 basebackup_retry_sleep = <%= @basebackup_retry_sleep %>
 <%- end -%>
-<%- if @last_backup_maximum_age != false -%>
+<%- if @last_backup_maximum_age  -%>
 last_backup_maximum_age = <%= @last_backup_maximum_age %>
 <%- end -%>
 retention_policy = <%= @retention_policy %>
@@ -101,7 +101,7 @@ streaming_backup_name = <%= @streaming_backup_name %>
 tablespace_bandwidth_limit = <%= @tablespace_bandwidth_limit %>
 <%- end -%>
 wal_retention_policy = <%= @wal_retention_policy %>
-<%- if @reuse_backup != false -%>
+<%- if @reuse_backup -%>
 reuse_backup = <%= @reuse_backup %>
 <%- end -%>
 configuration_files_directory = /etc/barman.d
