--- a/templates/server.conf.erb
+++ b/templates/server.conf.erb
@@ -39,6 +39,9 @@ check_timeout = <%= @check_timeout %>
 <%- if @compression -%>
 compression = <%= @compression %>
 <%- end -%>
+<%- if @create_slot -%>
+create_slot = <%= @create_slot %>
+<%- end -%>
 <%- if @custom_compression_filter -%>
 custom_compression_filter = <%= @custom_compression_filter %>
 <%- end -%>
@@ -90,6 +93,9 @@ pre_backup_retry_script = <%= @pre_backup_retry_script %>
 <%- end -%>
 <%- if @pre_backup_script -%>
 pre_backup_script = <%= @pre_backup_script %>
+<%- end -%>
+<%- if @primary_conninfo -%>
+primary_conninfo = <%= @primary_conninfo %>
 <%- end -%>
 <%- if @recovery_options -%>
 recovery_options = <%= @recovery_options %>
