--- a/templates/barman.conf.erb
+++ b/templates/barman.conf.erb
@@ -85,8 +85,14 @@ basebackup_retry_times = <%= @basebackup_retry_times %>
 <%- if @basebackup_retry_sleep  -%>
 basebackup_retry_sleep = <%= @basebackup_retry_sleep %>
 <%- end -%>
-<%- if @last_backup_maximum_age  -%>
+<%- if @last_backup_maximum_age -%>
 last_backup_maximum_age = <%= @last_backup_maximum_age %>
+<%- end -%>
+<%- if @last_wal_maximum_age -%>
+last_wal_maximum_age = <%= @last_wal_maximum_age %>
+<%- end -%>
+<%- if @last_backup_minimum_size -%>
+last_backup_minimum_size = <%= @last_backup_minimum_size %>
 <%- end -%>
 retention_policy = <%= @retention_policy %>
 retention_policy_mode = <%= @retention_policy_mode %>
